--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ header {
 
       <!-- FOTO (Link atualizado) -->
       <div class="photo-box">
-        <img src="assets/JOAO FOTO.jpeg" alt="Foto" alt="Foto do Estudante" id="studentPhoto">
+        <img src="assets/FOTO JOAO.jpeg" alt="Foto" alt="Foto do Estudante" id="studentPhoto">
       </div>
 
       <!-- QR CODE -->
