--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ header {
 <script>
 const docNum = document.getElementById('docNumber').innerText;
 new QRCode(document.getElementById("qrcode"), {
-  text: docNum + "-VALIDACAO",
+  text: "https://joaomarcos1818.github.io/CERTIFICADOUBES3/",
   width: 90,
   height: 90,
   colorDark: "#000000",
